src/traefic/sample-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: go-traefik-route
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: PathPrefix(`/go`)
    services:
    - kind: Service
      name: go-service-cip
      port: 8011
